fixes issue with squishy inputs (#1424)

--- a/components/vf-form__radio/vf-form__radio.scss
+++ b/components/vf-form__radio/vf-form__radio.scss
@@ -30,6 +30,7 @@
     display: inline-block;
     height: 1rem;
     margin-right: 8px;
+    min-width: 1rem;
     position: relative;
     top: 4px; // need to look at a better way to do this that keeps the semantics of a label
     width: 1rem;
